--- a/style.css
+++ b/style.css
@@ -1,24 +1,37 @@
 html {
     background:rgb(215, 216, 236);
-    font-family: 'Pixelify Sans', cursive;
+    font-family: 'Roboto Slab', serif;
 }
+
+
+<style>
+div {
+  border: 1px solid black;
+  padding: 25px 50px 75px 100px;
+  background-color: lightblue;
+}
+</style>
 
 
 h1 {
 
-    background: rgb(132, 46, 75);
     margin-top: 30px;
     margin-left: 50px;
     margin-right: 50px;
     margin-bottom: 30px;
 
-    color: white;
+    color: rgb(6, 6, 6);
 
 }
+
+
+
 
 img {
 
     border-radius: 100px
+    
+   
 
  }
 
@@ -30,11 +43,8 @@ img {
     background-repeat: no-repeat;
     background-attachment: fixed;
     margin-top: 30px;
-
     margin-left: 200px;
-
     margin-right: 50px;
-
     margin-bottom: 30px;
 
     }
@@ -46,7 +56,7 @@ form {
     border: 2px solid black;
     width: 600px;
     padding: 30px;
-    margin: 30px;
+    margin: 200px;
 
    
 
